--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="Hittable.cpp" />
     <ClCompile Include="IgniteEngine.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="ImageRessource.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_sdl2.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_sdlrenderer2.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_vulkan.cpp" />
@@ -272,6 +273,7 @@
     <ClInclude Include="Hit.h" />
     <ClInclude Include="Hittable.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="ImageRessource.h" />
     <ClInclude Include="imgui\backends\imgui_impl_sdl2.h" />
     <ClInclude Include="imgui\backends\imgui_impl_sdlrenderer2.h" />
     <ClInclude Include="imgui\backends\imgui_impl_vulkan.h" />
