--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ IgniteEngine/x64/*
 
 IgniteEngine/IgniteEngine/*.vcxproj
 IgniteEngine/IgniteEngine/*.vcxproj.filters
+
+IgniteEngine/IgniteEngine/imgui.ini
